navbar made fixed, post reducer actions added

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -2,6 +2,10 @@ html,body, #root {
   height: 100vh;
 }
 
+.color-prime {
+  color: #17a2b8;
+}
+
 .btn:focus, 
 .btn-info:focus, 
 .btn-primary:focus, 
@@ -9,6 +13,20 @@ html,body, #root {
 .btn-dark:focus,
 .btn-danger:focus {
   box-shadow: none !important;
+}
+
+.transparent-button, .transparent-button:focus, .transparent-button:hover {
+  background-color: Transparent;
+  padding: 0;
+  color: #000000;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
+}
+
+.liked, .liked:focus .liked:hover{
+  color: #17a2b8 !important;
 }
 
 .form-signup {
@@ -36,9 +54,21 @@ html,body, #root {
   justify-content: space-between;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 768px) {
   .form-inline .form-control{
     width: 20rem;
+  }
+
+  .fixed-top-md {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+  }
+
+  .just-empty {
+    height: 56px;
   }
 }
 
@@ -80,6 +110,14 @@ html,body, #root {
 
 .table th {
   color: rgb(241, 233, 155);
+}
+
+.simple-arrow::after {
+  content: "\f105";
+  margin-left: 4px;
+  font-family: 'Font Awesome 5 Free';
+  color: #0073b1;
+  font-weight: 800;
 }
 
 @media (max-width: 768px) {
