--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -1,4 +1,4 @@
-html,body, #root {
+html, body, #root {
   height: 100vh;
   background: #f7f7f7;
 }
@@ -48,14 +48,14 @@ html,body, #root {
 
 .form-container {
   background: #32383e;
-  margin-top: 20px;
+  margin: 20px auto;
   color: #ffa804;
   padding: 20px;
 }
 
 .loginform-container {
     display: flex;
-    height: 100%;
+    height: 85vh;
     align-items: center;
 }
 
@@ -190,7 +190,30 @@ html,body, #root {
   font-size: 1.2rem;
   font-family: cursive;
 }
-.carousel-caption h3 {
-  font-family: "Gill Sans", sans-serif;
-  margin-bottom: 0;
+
+.spinner-container {
+  position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-align: center;
+}
+
+.spinner-container:before {
+  content: "";
+  height: 100%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.wrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.footer {
+  margin-top: auto;
+  background: #026170;
 }
