--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -65,6 +65,10 @@ html, body, #root {
   justify-content: space-between;
 }
 
+.form-inline .form-control{
+  width: 90%;
+}
+
 @media (min-width: 768px) {
   .form-inline .form-control{
     width: 20rem;
@@ -134,6 +138,16 @@ html, body, #root {
 @media (max-width: 768px) {
   .hide-sm {
     display: none;
+  }
+}
+
+@media (max-width: 1000px) and (min-width: 768px) {
+  .hide-md {
+    display: none;
+  }
+
+  .form-inline .form-control{
+    width: 10rem;
   }
 }
 
@@ -216,4 +230,12 @@ html, body, #root {
 .footer {
   margin-top: auto;
   background: #026170;
+}
+
+.alert-position {
+  position: fixed;
+  top: 100px;
+  left: 10px;
+  z-index: 100;
+  text-align: center;
 }
