--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -66,7 +66,7 @@ html, body, #root {
 }
 
 .form-inline .form-control{
-  width: 90%;
+  width: 80%;
 }
 
 @media (min-width: 768px) {
@@ -145,13 +145,21 @@ html, body, #root {
   }
 }
 
-@media (max-width: 1000px) and (min-width: 768px) {
+@media (max-width: 1028px) and (min-width: 768px) {
   .hide-md {
     display: none;
   }
 
   .form-inline .form-control{
-    width: 10rem;
+    width: 13rem;
+  }
+
+  .navbar {
+    font-size: 1rem!important;
+  }
+
+  .navbar-brand img {
+    width: 150px;
   }
 }
 
